manifest/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-node-app-touch-deployment-dev
  namespace: group-4
  labels:
    app: simple-node-app-touch-deployment-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 50%
  selector:
    matchLabels:
      app: simple-node-app-touch-deployment-dev
  template:
    metadata:
      labels:
        app: simple-node-app-touch-deployment-dev
    spec:
      containers:
        - name: simple-node-app-touch-dev
          image: touchsung/simple-node-app:0f01ba1b94317f29d85c94fe703f8ee964346c61
          ports:
            - containerPort: 3000
