manifest/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-node-app-touch-service-dev
  namespace: group-4
spec:
  selector:
    app: simple-node-app-touch-deployment-dev
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
